Refactored newInstance with getDeclaredConstructor().newInstance() as it was deprecated